--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Inmobiliaria en Rosario, Alquileres, Ventas, Administración de propiedades, Negocios Inmobiliarios">
+    <meta name="keywords" content="INMOBILIARIA, INMOBILIARIA ROSARIO, ALQUILER, VENTA, TASACIONES, ADMINISTRACION, ADMINISTRACION DE PROPIEDADES, ALQUILO, VENDO, NEGOCIO INMOBILIARIO">
     <link rel="shortcout icon" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./css/estilos.css">
     <title>Eleve Negocios Inmobiliarios</title>
